--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
